[package]
name = "qcproto"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.88"
http = "0.2.8"
httparse = "1.8.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]
